<resources>
    <string name="app_name">Imagine</string>
    <string name="diferencia">Hoy podemos hacer la diferencia</string>
    <string name="Acceder">ACCEDER</string>
    <string name="Email">Email</string>
    <string name="Contrasena">Contraseña</string>
    <string name="Contrasena2">Contraseña (Min. 6 caracteres.)</string>
    <string name="Registrarse">REGISTRARSE</string>
    <string name="ContraOlvidada">Ha olvidado su contraseña</string>
    <string name="Solicitar">SOLICITAR</string>
    <string name="Nombre">Nombre Completo</string>
    <string name="NombreOrganizacion">Nombre Organización</string>
    <string name="RepetirContrasena">Repetir Contraseña</string>
    <string name="Telefono">Teléfono</string>
    <string name="Atras">Volver</string>
    <string name="FechaNacimiento">Edad</string>
    <string name="recuperarContra">Recuperar Contraseña</string>
    <string name="ingreseEmail">Ingrese su email de recuperación</string>
    <string name="Donador">DONAR</string>
    <string name="VerDonaciones">VER DONACIONES</string>
    <string name="Mapas">DONACIONES EN MAPA</string>
    <string name="CerrarSesion">CERRAR SESIÓN</string>
    <string name="ProductoDonar">Producto a donar</string>
    <string name="ProductoCantidad">Cantidad</string>
    <string name="ProductoPais">País</string>
    <string name="ProductoCiudad">Ciudad</string>
    <string name="ProductoFoto">Subir imagen o sacar foto</string>
    <string name="Descripcion">Descripción</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="Paises">
        <item>Afganistán</item>
        <item>Albania</item>
        <item>Alemania</item>
        <item>Algeria</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguila</item>
        <item>Antártida</item>
        <item>Antigua y Barbuda</item>
        <item>Arabia Saudita</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaiyán</item>
        <item>Bahamas</item>
        <item>Bahrein</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Bélgica</item>
        <item>Belice</item>
        <item>Benín</item>
        <item>Bhután</item>
        <item>Bielorrusia</item>
        <item>Birmania</item>
        <item>Bolivia</item>
        <item>Bosnia y Herzegovina</item>
        <item>Botsuana</item>
        <item>Brasil</item>
        <item>Brunéi</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cabo Verde</item>
        <item>Camboya</item>
        <item>Camerún</item>
        <item>Canadá</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Chipre</item>
        <item>Ciudad del Vaticano</item>
        <item>Colombia</item>
        <item>Comoras</item>
        <item>Corea del Norte</item>
        <item>Corea del Sur</item>
        <item>Costa de Marfil</item>
        <item>Costa Rica</item>
        <item>Croacia</item>
        <item>Cuba</item>
        <item>Curazao</item>
        <item>Dinamarca</item>
        <item>Dominica</item>
        <item>Ecuador</item>
        <item>Egipto</item>
        <item>El Salvador</item>
        <item>Emiratos Árabes Unidos</item>
        <item>Eritrea</item>
        <item>Eslovaquia</item>
        <item>Eslovenia</item>
        <item>España</item>
        <item>Estados Unidos de América</item>
        <item>Estonia</item>
        <item>Etiopía</item>
        <item>Filipinas</item>
        <item>Finlandia</item>
        <item>Fiyi</item>
        <item>Francia</item>
        <item>Gabón</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Ghana</item>
        <item>Gibraltar</item>
        <item>Granada</item>
        <item>Grecia</item>
        <item>Groenlandia</item>
        <item>Guadalupe</item>
        <item>Guam</item>
        <item>Guatemala</item>
        <item>Guayana Francesa</item>
        <item>Guernsey</item>
        <item>Guinea</item>
        <item>Guinea Ecuatorial</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haití</item>
        <item>Honduras</item>
        <item>Hong kong</item>
        <item>Hungría</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Irak</item>
        <item>Irán</item>
        <item>Irlanda</item>
        <item>Isla Bouvet</item>
        <item>Isla de Man</item>
        <item>Isla de Navidad</item>
        <item>Isla Norfolk</item>
        <item>Islandia</item>
        <item>Islas Bermudas</item>
        <item>Islas Caimán</item>
        <item>Islas Cocos (Keeling)</item>
        <item>Islas Cook</item>
        <item>Islas de Åland</item>
        <item>Islas Feroe</item>
        <item>Islas Georgias del Sur y Sandwich del Sur</item>
        <item>Islas Heard y McDonald</item>
        <item>Islas Maldivas</item>
        <item>Islas Malvinas</item>
        <item>Islas Marianas del Norte</item>
        <item>Islas Marshall</item>
        <item>Islas Pitcairn</item>
        <item>Islas Salomón</item>
        <item>Islas Turcas y Caicos</item>
        <item>Islas Ultramarinas Menores de Estados Unidos</item>
        <item>Islas Vírgenes Británicas</item>
        <item>Islas Vírgenes de los Estados Unidos</item>
        <item>Israel</item>
        <item>Italia</item>
        <item>Jamaica</item>
        <item>Japón</item>
        <item>Jersey</item>
        <item>Jordania</item>
        <item>Kazajistán</item>
        <item>Kenia</item>
        <item>Kirguistán</item>
        <item>Kiribati</item>
        <item>Kuwait</item>
        <item>Laos</item>
        <item>Lesoto</item>
        <item>Letonia</item>
        <item>Líbano</item>
        <item>Liberia</item>
        <item>Libia</item>
        <item>Liechtenstein</item>
        <item>Lituania</item>
        <item>Luxemburgo</item>
        <item>Macao</item>
        <item>Macedônia</item>
        <item>Madagascar</item>
        <item>Malasia</item>
        <item>Malawi</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marruecos</item>
        <item>Martinica</item>
        <item>Mauricio</item>
        <item>Mauritania</item>
        <item>Mayotte</item>
        <item>México</item>
        <item>Micronesia</item>
        <item>Moldavia</item>
        <item>Mónaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Montserrat</item>
        <item>Mozambique</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>Niue</item>
        <item>Noruega</item>
        <item>Nueva Caledonia</item>
        <item>Nueva Zelanda</item>
        <item>Omán</item>
        <item>Países Bajos</item>
        <item>Pakistán</item>
        <item>Palau</item>
        <item>Palestina</item>
        <item>Panamá</item>
        <item>Papúa Nueva Guinea</item>
        <item>Paraguay</item>
        <item>Perú</item>
        <item>Polinesia Francesa</item>
        <item>Polonia</item>
        <item>Portugal</item>
        <item>Puerto Rico</item>
        <item>Qatar</item>
        <item>Reino Unido</item>
        <item>República Centroafricana</item>
        <item>República Checa</item>
        <item>República de Sudán del Sur</item>
        <item>República del Congo</item>
        <item>República Democrática del Congo</item>
        <item>República Dominicana</item>
        <item>Reunión</item>
        <item>Ruanda</item>
        <item>Rumanía</item>
        <item>Rusia</item>
        <item>Sahara Occidental</item>
        <item>Samoa</item>
        <item>Samoa Americana</item>
        <item>San Bartolomé</item>
        <item>San Cristóbal y Nieves</item>
        <item>San Marino</item>
        <item>San Martín (Francia)</item>
        <item>San Pedro y Miquelón</item>
        <item>San Vicente y las Granadinas</item>
        <item>Santa Elena</item>
        <item>Santa Lucía</item>
        <item>Santo Tomé y Príncipe</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leona</item>
        <item>Singapur</item>
        <item>Sint Maarten</item>
        <item>Siria</item>
        <item>Somalia</item>
        <item>Sri lanka</item>
        <item>Sudáfrica</item>
        <item>Sudán</item>
        <item>Suecia</item>
        <item>Suiza</item>
        <item>Surinám</item>
        <item>Svalbard y Jan Mayen</item>
        <item>Swazilandia</item>
        <item>Tailandia</item>
        <item>Taiwán</item>
        <item>Tanzania</item>
        <item>Tayikistán</item>
        <item>Territorio Británico del Océano Índico</item>
        <item>Territorios Australes y Antárticas Franceses</item>
        <item>Timor Oriental</item>
        <item>Togo</item>
        <item>Tokelau</item>
        <item>Tonga</item>
        <item>Trinidad y Tobago</item>
        <item>Tunez</item>
        <item>Turkmenistán</item>
        <item>Turquía</item>
        <item>Tuvalu</item>
        <item>Ucrania</item>
        <item>Uganda</item>
        <item>Uruguay</item>
        <item>Uzbekistán</item>
        <item>Vanuatu</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Wallis y Futuna</item>
        <item>Yemen</item>
        <item>Yibuti</item>
        <item>Zambia</item>
        <item>Zimbabue</item>

    </string-array>
    <string name="title_activity_mapa">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_mapita_mostrar">Map</string>
    <string name="gracias">GRACIAS</string>
    <string name="textview">TextView</string>
    <string name="volver">VOLVER</string>
    <string name="buscando_cantidad_de_donaciones">Buscando cantidad de donaciones...</string>


</resources>
