<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Login"
    android:background="@color/colorPrimary">

    <ProgressBar
        android:id="@+id/pb"
        style="?android:attr/progressBarStyle"
        android:backgroundTint="@color/textIcons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sv" />

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="356dp"
                android:src="@mipmap/imagine_foreground" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:ems="10"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColor="@color/primaryText"
                android:textColorHint="@color/secondatyText"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:ems="10"
                android:hint="@string/Contrasena"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColorHint="@color/secondatyText"
                android:textColor="@color/primaryText"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/BtnAcceder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/boton_redondo"
                android:padding="10dp"
                android:text="@string/Acceder"
                android:textAlignment="center"
                android:textColor="@color/primaryText"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/BtnRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/boton_redondo"
                android:padding="10dp"
                android:text="@string/Registrarse"
                android:textAlignment="center"
                android:textColor="@color/primaryText"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvContrasenaolvidada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:clickable="true"
                android:text="@string/ContraOlvidada"
                android:textAlignment="center"
                android:textColor="@color/colorAccentDark"
                android:textSize="20sp"
                android:textStyle="italic" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>