<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AgregarProducto"
    android:background="@color/colorPrimary">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:src="@mipmap/imagine_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/ProductoDonar"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/primaryText"
        android:textColorHighlight="@color/secondatyText"
        android:textColorHint="@color/secondatyText"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/etDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/Descripcion"
        android:inputType="textMultiLine"
        android:lines="3"
        android:maxLines="6"
        android:minLines="1"
        android:scrollHorizontally="false"
        android:singleLine="false"
        android:textAlignment="center"
        android:textColor="@color/primaryText"
        android:textColorHighlight="@color/secondatyText"
        android:textColorHint="@color/secondatyText"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etProducto" />

    <EditText
        android:id="@+id/etCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:digits="0123456789"
        android:ems="10"
        android:hint="@string/ProductoCantidad"
        android:inputType="number"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/primaryText"
        android:textColorHint="@color/secondatyText"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDescripcion" />

    <EditText
        android:id="@+id/etPais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="false"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/ProductoPais"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/primaryText"
        android:textColorHighlight="@color/secondatyText"
        android:textColorHint="@color/secondatyText"
        android:textSize="20sp"
        android:textStyle="italic"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCantidad" />

    <EditText
        android:id="@+id/etUbicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="false"
        android:ems="10"
        android:enabled="false"
        android:hint="Ubicación"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/primaryText"
        android:textColorHighlight="@color/secondatyText"
        android:textColorHint="@color/secondatyText"
        android:textSize="20sp"
        android:textStyle="italic"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPais" />


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/textIcons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSeleccionarUbicacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:background="@drawable/boton_redondo"
        android:padding="2dp"
        android:text="seleccionar Ubicación producto"
        android:textColor="@color/primaryText"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFoto" />

    <Button
        android:id="@+id/btnFoto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:background="@drawable/boton_redondo"
        android:padding="2dp"
        android:text="@string/ProductoFoto"
        android:textAlignment="center"
        android:textColor="@color/primaryText"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUbicacion" />

    <Button
        android:id="@+id/btnDonar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/boton_redondo"
        android:text="@string/Donador"
        android:textColor="@color/primaryText"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>